[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
version = "2.2.0"
name = "skosprovider_sqlalchemy"
dynamic = ["readme"]
authors = [
    { name = "Flanders Heritage Agency", email = "ict@onroerenderfgoed.be" },
]
license = "MIT"
description = "skosprovider_sqlalchemy"
requires-python = ">=3.10,<3.13.11"
keywords = ["rdf", "skos", "skosprovider", "vocabularies", "thesauri"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "SQLAlchemy>=2.0.35",
    "skosprovider>=1.2.0",
]

[project.urls]
History = "https://github.com/OnroerendErfgoed/skosprovider_sqlalchemy/blob/master/HISTORY.rst"
Tracker = "https://github.com/OnroerendErfgoed/skosprovider_sqlalchemy/issues"
Source = "https://github.com/OnroerendErfgoed/skosprovider_sqlalchemy"
Documentation = "https://skosprovider_sqlalchemy.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "uv>=0.4.11",
    "psycopg2-binary>=2.9.9",
    "sphinx>=8.0.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coveralls>=4.0.1",
    "flake8>=7.1.1",
]

[project.scripts]
init_skos_db = "skosprovider_sqlalchemy.scripts.init_skos_db:main"
calc_visitation = "skosprovider_sqlalchemy.scripts.calc_visitation:main"

##
# Build tool specific
##
[tool.hatch.build.targets.wheel]
# In the wheel we want to have skosprovider_sqlalchemy in the root as python module.
only-include = [
    "/skosprovider_sqlalchemy",
]

[tool.hatch.metadata]
# This allows us to use github links as dependencies
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    { path = "README.rst" },
]
